plugins/sunfish/argos/DixService: Clean URL construction future deprecation.